// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field with a  number input 1`] = `
.sx03kze6obnf--css {
  margin: auto;
}

.sx03kze6obnf--css {
  height: 100px;
  width: 100px;
}

.sxfigyv {
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-2);
  width: 100%;
  padding: var(--space-3);
}

.sxfigyv {
  transition: all 100ms ease-out;
}

.sxfigyv:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sxfigyv[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sxfigyvysvs0--css {
  margin-bottom: var(--space-1);
}

.sxhmjku {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
}

.sxhmjkuvs8z6--size-md {
  font-size: var(--fontSizes-md);
}

.sxhmjkuysvs0--css {
  margin-bottom: var(--space-1);
}

.sxeds20 {
  color: var(--colors-tonal900);
  font-family: var(--fonts-sans);
  font-weight: 400;
  margin: 0;
  max-width: 60ch;
}

.sxeds20ido38--size-md {
  font-size: var(--fontSizes-md);
  letter-spacing: 0.02em;
  line-height: 1.4;
}

.sx25jen {
  color: var(--colors-danger);
}

<div>
  <div
    class="sx03kze sx03kze6obnf--css"
    data-testid="css-wrapper"
  >
    <label
      class="sxhmjku sxhmjkuvs8z6--size-md sxhmjkuysvs0--css"
    />
    <input
      class="sxfigyv sxfigyvysvs0--css"
      inputmode="numeric"
      pattern="[0-9]*"
      placeholder="001"
      type="text"
    />
    <p
      class="sxeds20 sx25jen sxeds20ido38--size-md"
    />
  </div>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
.sx03kze6obnf--css {
  margin: auto;
}

.sx03kze6obnf--css {
  height: 100px;
  width: 100px;
}

.sxfigyv {
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-2);
  width: 100%;
  padding: var(--space-3);
}

.sxfigyv {
  transition: all 100ms ease-out;
}

.sxfigyv:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sxfigyv[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sxfigyvysvs0--css {
  margin-bottom: var(--space-1);
}

.sxhmjku {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.4;
}

.sxhmjkuvs8z6--size-md {
  font-size: var(--fontSizes-md);
}

.sxhmjkuysvs0--css {
  margin-bottom: var(--space-1);
}

.sxeds20 {
  color: var(--colors-tonal900);
  font-family: var(--fonts-sans);
  font-weight: 400;
  margin: 0;
  max-width: 60ch;
}

.sxeds20ido38--size-md {
  font-size: var(--fontSizes-md);
  letter-spacing: 0.02em;
  line-height: 1.4;
}

.sx25jen {
  color: var(--colors-danger);
}

<div>
  <div
    class="sx03kze sx03kze6obnf--css"
    data-testid="css-wrapper"
  >
    <label
      class="sxhmjku sxhmjkuvs8z6--size-md sxhmjkuysvs0--css"
    />
    <input
      class="sxfigyv sxfigyvysvs0--css"
      placeholder="INPUT"
      type="text"
    />
    <p
      class="sxeds20 sx25jen sxeds20ido38--size-md"
    />
  </div>
</div>
`;
